[Enhancement #185] Allow not providing scan package to entity class discovery.
Both empty string and no configuration at all are allowed.